@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2023 Shun Sakai
+#
+# SPDX-License-Identifier: Apache-2.0 OR MIT
+
 version: 2
 updates:
   - package-ecosystem: "github-actions"
