@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2023 Shun Sakai
+#
+# SPDX-License-Identifier: Apache-2.0 OR MIT
+
 id: wl467gx72vulea0zkwlxfxxeg799wo5gt3ktekpabogi0jrf
 name: sysexits
 main: src/main.zig
